crates/teleprompt-cli/tests/snapshots/golden__check-desktop.snap
---
source: crates/teleprompt-cli/tests/golden.rs
expression: transcript(&out)
---
{
  "exit": 0,
  "stderr": [
    "warning: 9 of 9 lines have no current take and are synthesized: intro, glass, size, mirror, record, follow, keep, keys, outro"
  ],
  "stdout": {
    "errors": [],
    "ok": true,
    "warnings": [
      "9 of 9 lines have no current take and are synthesized: intro, glass, size, mirror, record, follow, keep, keys, outro"
    ]
  }
}
