crates/teleprompt-cli/tests/snapshots/golden__check-remotion.snap
---
source: crates/teleprompt-cli/tests/golden.rs
expression: transcript(&out)
---
{
  "exit": 0,
  "stderr": [
    "warning: line `long` has a 49-word sentence, hard to say in one breath and to read as captions",
    "  --> examples/remotion/scripts/remotion.md:46:1",
    "  help: split it in two"
  ],
  "stdout": {
    "errors": [],
    "ok": true,
    "warnings": [
      "line `long` has a 49-word sentence, hard to say in one breath and to read as captions\n  --> examples/remotion/scripts/remotion.md:46:1\n  help: split it in two"
    ]
  }
}
