crates/teleprompt-cli/tests/snapshots/golden__fail-capture.snap
---
source: crates/teleprompt-cli/tests/golden.rs
expression: runs
---
{
  "invalid human": {
    "exit": 1,
    "stderr": [
      "error: error: content appears before the first heading",
      "  --> proj/scripts/bad.md:1:1",
      "  help: every line and action block must belong to a chapter",
      "error: content appears before the first heading",
      "  --> proj/scripts/bad.md:3:1",
      "  help: every line and action block must belong to a chapter"
    ],
    "stdout": ""
  },
  "invalid json": {
    "exit": 1,
    "stderr": [
      "error: error: content appears before the first heading",
      "  --> proj/scripts/bad.md:1:1",
      "  help: every line and action block must belong to a chapter",
      "error: content appears before the first heading",
      "  --> proj/scripts/bad.md:3:1",
      "  help: every line and action block must belong to a chapter"
    ],
    "stdout": ""
  },
  "missing human": {
    "exit": 1,
    "stderr": [
      "error: cannot read proj/scripts/missing.md: No such file or directory (os error 2)"
    ],
    "stdout": ""
  },
  "missing json": {
    "exit": 1,
    "stderr": [
      "error: cannot read proj/scripts/missing.md: No such file or directory (os error 2)"
    ],
    "stdout": ""
  },
  "orphan human": {
    "exit": 1,
    "stderr": [
      "error: cannot locate a project for loose/orphan.md: no teleprompt.toml found in this directory or any parent"
    ],
    "stdout": ""
  },
  "orphan json": {
    "exit": 1,
    "stderr": [
      "error: cannot locate a project for loose/orphan.md: no teleprompt.toml found in this directory or any parent"
    ],
    "stdout": ""
  }
}
