crates/teleprompt-cli/tests/snapshots/golden__fail-new-import.snap
---
source: crates/teleprompt-cli/tests/golden.rs
expression: runs
---
{
  "import missing human": {
    "exit": 1,
    "stderr": [
      "error: cannot read proj/nothing.md: No such file or directory (os error 2)"
    ],
    "stdout": ""
  },
  "import missing json": {
    "exit": 1,
    "stderr": [],
    "stdout": {
      "errors": [
        "cannot read proj/nothing.md: No such file or directory (os error 2)"
      ],
      "ok": false
    }
  },
  "new existing human": {
    "exit": 1,
    "stderr": [
      "error: proj already contains a teleprompt project"
    ],
    "stdout": ""
  },
  "new existing json": {
    "exit": 1,
    "stderr": [],
    "stdout": {
      "errors": [
        "proj already contains a teleprompt project"
      ],
      "ok": false
    }
  }
}
